Update README with comprehensive build instructions and Invoxen branding
- Added detailed step-by-step build guide for Windows/Mac/Linux
- Included prerequisites and environment setup instructions
- Added troubleshooting section for common build issues
- Updated branding from 'AI Financial Assistant' to 'Invoxen'
- Added invoice sharing feature documentation
- Updated version to 1.1.0
- Added Rupee currency information
- Improved installation and usage instructions
- Added build variants documentation
- Updated author information